# graph-repr

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  quick.sh
.github/workflows/: cmake-multi-platform.yml
examples/: graph.txt
include/: cli.h  common.h  edmonds.h  error.h  graph.h  list.h  memory.h  set.h  vertex.h
include/cli/: cli.h
include/graph/: edmonds.h  graph.h
include/utils/: graph.h  list.h  set.h  stack.h  vertex.h
src/: CMakeLists.txt  cli.c  edmonds.c  error.c  graph.c  list.c  main.c  memory.c  set.c  vertex.c
src/cli/: cli.c
src/graph/: edmonds.c  graph.c
src/utils/: graph.c  list.c  set.c  stack.c  vertex.c
test/: CMakeLists.txt  cli_test.cc  rand_graph.c  test_cli.cc  test_list.cc
